--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,8 +13,8 @@ jobs:
       APP_IMAGE: keboola-component
       KBC_DEVELOPERPORTAL_USERNAME: ${{ secrets.KBC_DEVELOPERPORTAL_USERNAME }}
       KBC_DEVELOPERPORTAL_PASSWORD: ${{ secrets.KBC_DEVELOPERPORTAL_PASSWORD }}
-      KBC_DEVELOPERPORTAL_VENDOR: ${{ secrets.$KBC_DEVELOPERPORTAL_VENDOR }}
-      KBC_DEVELOPERPORTAL_APP: ${{ secrets.$KBC_DEVELOPERPORTAL_APP }}
+      KBC_DEVELOPERPORTAL_VENDOR: ${{ secrets.KBC_DEVELOPERPORTAL_VENDOR }}
+      KBC_DEVELOPERPORTAL_APP: ${{ secrets.KBC_DEVELOPERPORTAL_APP }}
     steps:
       - uses: actions/checkout@v2
       - name: Deploy
