--- a/.github/workflows/deploy_manual.yml
+++ b/.github/workflows/deploy_manual.yml
@@ -14,7 +14,8 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Set env
-        run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_TAG
+        run: |
+          echo ${{ steps.vars.outputs.tag }}
       - name: Deploy
         run: |
           chmod +x ./deploy.sh
