--- a/.github/workflows/deploy_manual.yml
+++ b/.github/workflows/deploy_manual.yml
@@ -12,15 +12,28 @@ jobs:
       KBC_DEVELOPERPORTAL_VENDOR: ${{ secrets.KBC_DEVELOPERPORTAL_VENDOR }}
       KBC_DEVELOPERPORTAL_APP: ${{ secrets.KBC_DEVELOPERPORTAL_APP }}
     steps:
-      - uses: actions/checkout@v2
-      - name: Get tag
-        run: |
-          echo ::set-output name=SOURCE_TAG::${GITHUB_REF#refs/tags/}
-      - name: Deploy
-        env:
-          GITHUB_TAG: ${{ steps.branch_name.outputs.SOURCE_TAG }}
-        run: |
-          chmod +x ./deploy.sh
-      - name: Run scripts
-        run: |
-          ./deploy.sh
+    - name: Checkout code
+      uses: actions/checkout@v1
+
+    - name: Build image
+      run: docker build -t component .
+
+    - name: Push image
+      uses: odinuv/action-push-to-ecr@master
+      with:
+        vendor: ${{ secrets.vendor }}
+        app_id: ${{ secrets.app_id }}
+        username: ${{ secrets.developer_portal_user }}
+        password: ${{ secrets.developer_portal_password }}
+        tag: ${{ github.ref }}
+        push_latest: true
+        source_image: component
+
+    - name: Deploy to production
+      uses: keboola/action-set-tag-developer-portal@master
+      with:
+        vendor: ${{ secrets.vendor }}
+        app_id: ${{ secrets.app_id }}
+        username: ${{ secrets.developer_portal_user }}
+        password: ${{ secrets.developer_portal_password }}
+        tag: ${{ github.ref }}
