--- a/.github/workflows/pushtest.yml
+++ b/.github/workflows/pushtest.yml
@@ -17,7 +17,7 @@ jobs:
         run: |
           docker pull quay.io/keboola/developer-portal-cli-v2:latest
           export REPOSITORY=`docker run --rm -e KBC_DEVELOPERPORTAL_USERNAME -e KBC_DEVELOPERPORTAL_PASSWORD -e KBC_DEVELOPERPORTAL_URL quay.io/keboola/developer-portal-cli-v2:latest ecr:get-repository $KBC_DEVELOPERPORTAL_VENDOR $KBC_DEVELOPERPORTAL_APP`
-          docker tag $APP_IMAGE:latest $REPOSITORY:test
+          docker tag $APP_IMAGE:latest $REPOSITORY:testtag
           eval $(docker run --rm -e KBC_DEVELOPERPORTAL_USERNAME -e KBC_DEVELOPERPORTAL_PASSWORD -e KBC_DEVELOPERPORTAL_URL quay.io/keboola/developer-portal-cli-v2:latest ecr:get-login $KBC_DEVELOPERPORTAL_VENDOR $KBC_DEVELOPERPORTAL_APP)
-          docker push $REPOSITORY:test
+          docker push $REPOSITORY:testtag
           docker pull quay.io/keboola/syrup-cli:latest
