--- a/.github/workflows/pushtest.yml
+++ b/.github/workflows/pushtest.yml
@@ -10,7 +10,9 @@ jobs:
       KBC_DEVELOPERPORTAL_VENDOR: ${{ secrets.KBC_DEVELOPERPORTAL_VENDOR }}
       KBC_DEVELOPERPORTAL_APP: ${{ secrets.KBC_DEVELOPERPORTAL_APP }}
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
+        with:
+          ref: ${{ github.ref }}
       - name: Build image
         run: docker build -t ${APP_IMAGE} .
       - name: Push to ECR
@@ -20,4 +22,3 @@ jobs:
           docker tag $APP_IMAGE:latest $REPOSITORY:testtag
           eval $(docker run --rm -e KBC_DEVELOPERPORTAL_USERNAME -e KBC_DEVELOPERPORTAL_PASSWORD -e KBC_DEVELOPERPORTAL_URL quay.io/keboola/developer-portal-cli-v2:latest ecr:get-login $KBC_DEVELOPERPORTAL_VENDOR $KBC_DEVELOPERPORTAL_APP)
           docker push $REPOSITORY:testtag
-          docker pull quay.io/keboola/syrup-cli:latest
